Fixes contrast ratio for footer links

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ ion-icon {
 }
 
 .fm-attribution a {
-	color: var(--secondary-color);
+	color: var(--white);
 }
 
 /* Media Queries */
